@@ -1,4 +1,7 @@
 2015-07-10 Gregory L. Lee <lee218@llnl.gov>
+	* err.[C,h] : better control of DySectAPI verbosity and logging
+
+2015-07-10 Gregory L. Lee <lee218@llnl.gov>
 	* : DySectAPI filter function should only merge packets with same tag
 
 2015-07-08 Gregory L. Lee <lee218@llnl.gov>
